--- a/css/global.css
+++ b/css/global.css
@@ -384,8 +384,9 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   color: #ec20c0;
 }
 .sidebar .menu .dropdown-menu {
+  background-color: #000;
   position: absolute;
-  top: 58px;
+  bottom: -90px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -395,7 +396,7 @@ nav .input-toggler:checked ~ .sidebar-overlay {
           flex-direction: column;
   display: none;
   z-index: 99;
-  padding-left: 20px;
+  padding: 10px;
 }
 @media all and (max-width: 769px) {
   .sidebar .menu .dropdown-menu {
