--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,11 +1,11 @@
 $primary: #ec20c0;
 $secondary:#000;
 
-$link:#549140;
+$link:#fff;
 $font-primary:#ff0000;
 
-$pc-media:960px;
-$pcs-media:959px;
+$pc-media:992px;
+$pcs-media:991px;
 $phone-media:769px;
 $phones-media:768px;
 
