--- a/css/global.css
+++ b/css/global.css
@@ -1,20 +1,16 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html {
-  line-height: 1.15;
   -webkit-text-size-adjust: 100%;
+  letter-spacing: 2px;
 }
 
 body {
   margin: 0;
+  padding: 0;
 }
 
 main {
   display: block;
-}
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
 }
 
 hr {
@@ -30,8 +26,9 @@ pre {
 }
 
 a {
-  color: #549140;
+  color: #fff;
   background-color: transparent;
+  text-decoration: none;
 }
 
 abbr[title] {
@@ -216,29 +213,37 @@ li {
   list-style: none;
 }
 
-a {
-  text-decoration: none;
+/* other share */
+a.event-disable {
+  pointer-events: none;
+  cursor: default;
 }
 
-/* VARIABLE */
-/* WRAPPER */
+/* gobal */
 #wrapper {
   position: relative;
 }
 
-/* NAV */
+/* nav */
 nav {
   position: fixed;
   width: 100%;
   top: 0;
-  background: rgba(0, 0, 0, 0.8);
+  left: 0;
   padding: 20px 0;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
   z-index: 1;
+  background-color: #000;
+  opacity: 1;
 }
 nav.mini {
-  padding: 0;
+  padding: 10px 0;
+}
+nav.nav-hide {
+  opacity: 0;
+  -webkit-transition: opacity 0.2s ease-in;
+  transition: opacity 0.2s ease-in;
 }
 nav .input-toggler {
   display: none;
@@ -327,20 +332,25 @@ nav .input-toggler:checked ~ .sidebar-overlay {
 }
 
 .sidebar {
-  max-width: 1200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 0 10px;
   margin: 0 auto;
 }
 .sidebar .nav-brand {
   padding: 20px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 .sidebar .menu {
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
   -webkit-transition: all 0.35s ease-out;
   transition: all 0.35s ease-out;
 }
@@ -406,6 +416,61 @@ nav .input-toggler:checked ~ .sidebar-overlay {
 }
 .sidebar .menu .dropdown-menu li {
   padding-bottom: 5px;
+}
+.sidebar .user-account {
+  border: 1px solid #B9373C;
+  border-left: 0;
+  border-radius: 18px;
+  position: absolute;
+  right: 30px;
+  top: 20px;
+  -webkit-transition: all 0.35s ease-in;
+  transition: all 0.35s ease-in;
+}
+.sidebar .user-account > div {
+  display: inline-block;
+}
+.sidebar .user-account > div a {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #B9373C;
+  color: #fff;
+  border-radius: 18px;
+}
+.sidebar .user-account > div:first-of-type a {
+  padding: 10px 25px;
+}
+.sidebar .user-account > div:nth-of-type(2) a {
+  background-color: transparent;
+}
+.sidebar .user-account > div.account-sub {
+  display: block;
+  text-align: center;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+  width: 100%;
+}
+.sidebar .user-account > div.account-sub a {
+  display: block;
+  background-color: transparent;
+  opacity: 0;
+  -webkit-transform: translate(0px, -10px);
+          transform: translate(0px, -10px);
+  -webkit-transition: all 0.35s ease-in 0.3s;
+  transition: all 0.35s ease-in 0.3s;
+}
+.sidebar .user-account:hover {
+  background-color: #B9373C;
+}
+.sidebar .user-account:hover .account-sub {
+  height: 123px;
+}
+.sidebar .user-account:hover .account-sub a {
+  opacity: 1;
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
 }
 
 #main-content {
