--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,9 +1,102 @@
-@use 'variables'as v;
+@use "variables" as v;
+#landing {
+  position: relative;
+  z-index: 200;
+  width: 100%;
+  .landing-page {
+    height: 100vh;
+    width: 100%;
+    background-color: #000;
+    position: relative;
 
-section{
-  &.panel{}
-  &.s1{
-    background: #000;
+    h1 {
+      display: flex;
+      width: 100%;
+      color: #fff;
+      font-size: 7rem;
+      justify-content: center;
+      text-align: right;
+      height: 100%;
+      align-items: center;
+      span {
+        display: block;
+      }
+    }
+    .welcome {
+      width: 224px;
+      height: 224px;
+      cursor: pointer;
+      position: absolute;
+      bottom: 150px;
+      left: 15%;
+
+      .text-round {
+        width: 100%;
+        height: 100%;
+        background: url(../image/svg/welcome-round.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        animation: rotate 10s infinite linear;
+      }
+      .mouse {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 34px;
+        height: 53px;
+        background: url(../image/svg/mouse.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        .scroller{
+          width: 3px;
+          height: 8px;
+          border: 1px solid #fff;
+          border-radius: 25%;
+          position: absolute;
+          top: 13px;
+          left: 14px;
+          animation: scroll 1s ease-in infinite;
+        }
+      }
+    }
   }
+}
+//only for index-scroll.html
+#main-content {
+  .s1,.s2,.s3 {
+    background: #fff;
+    padding-top: 80px;
+  }
+}
 
+//for swpier
+.v-swiper{
+  background-color: v.$bg-color;
+  .swiper-wrapper{
+    .swiper-slide:nth-of-type(2){
+      flex-direction: inherit;
+      justify-content:flex-start
+    }
+    .s-swiper{
+      max-height: 500px;
+    }
+  }
+   
+}
+
+
+
+//animate
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes scroll {
+  0% { transform: translateY(0);opacity: 1; }
+  100% { transform: translateY(8px);opacity: 0; }
 }
