--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,9 @@
-$primary: #ec20c0;
+$primary: #b9373b;
+$primary-opacity: #b9373bbd;
 $secondary:#000;
 
-$link:#fff;
-$font-primary:#ff0000;
+$white:#fff;
+$font-primary:rgb(233, 233, 233);
 $bg-color:#000;
 
 $pc-media:992px;
