--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,7 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html {
   -webkit-text-size-adjust: 100%;
-  letter-spacing: 2px;
+  letter-spacing: 1.5px;
   font-size: 16px;
   position: relative;
   background-color: #000;
@@ -10,7 +10,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-size: 16px;
+  font-size: 17px;
   position: relative;
   background-color: #000;
 }
@@ -41,9 +41,16 @@ pre {
 }
 
 a {
-  color: #fff;
   background-color: transparent;
   text-decoration: none;
+  color: rgb(233, 233, 233);
+  font-weight: normal;
+  -webkit-transition: color 0.3s ease, font-weight 0.4s ease;
+  transition: color 0.3s ease, font-weight 0.4s ease;
+}
+a:hover {
+  color: #fff;
+  font-weight: bolder;
 }
 
 abbr[title] {
@@ -288,7 +295,7 @@ nav {
   padding: 20px 0;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
-  z-index: 10;
+  z-index: 0;
   background-color: #000;
   opacity: 1;
 }
@@ -333,7 +340,7 @@ nav .menu-toggler {
 nav .menu-toggler .menu-toggler-line {
   width: 100%;
   height: 2px;
-  background: #ec20c0;
+  background: rgba(185, 55, 59, 0.7411764706);
   margin: 0 0 8px 0px;
   position: relative;
   -webkit-transition: all 0.35s ease-out;
@@ -403,27 +410,26 @@ nav .input-toggler:checked ~ .sidebar-overlay {
           flex: 1;
 }
 .sidebar .menu {
-  -webkit-box-flex: 5;
-      -ms-flex: 5;
-          flex: 5;
+  -webkit-box-flex: 3;
+      -ms-flex: 3;
+          flex: 3;
   -webkit-transition: all 0.35s ease-out;
   transition: all 0.35s ease-out;
 }
-.sidebar .menu li {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+.sidebar .menu > li {
+  display: inline-block;
+  width: 12%;
+  text-align: center;
+  position: relative;
 }
-.sidebar .menu li:hover .dropdown-menu {
+.sidebar .menu > li:hover .dropdown-menu {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 @media all and (max-width: 769px) {
-  .sidebar .menu li {
+  .sidebar .menu > li {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -436,22 +442,27 @@ nav .input-toggler:checked ~ .sidebar-overlay {
 .sidebar .menu .menu-link {
   position: relative;
   display: inline-block;
-  padding: 20px;
-  color: white;
+  text-align: center;
+  padding: 10px;
+  color: rgb(233, 233, 233);
+  -webkit-transition: color 0.4s ease, font-weight 0.4s ease;
+  transition: color 0.4s ease, font-weight 0.4s ease;
 }
 .sidebar .menu .menu-link:hover {
-  color: #ec20c0;
+  color: #fff;
+  font-weight: bolder;
 }
 .sidebar .menu .menu-link:focus {
-  color: #ec20c0;
+  color: #fff;
+  font-weight: bold;
 }
 .sidebar .menu .menu-link:active {
-  color: #ec20c0;
+  color: #fff;
+  font-weight: bold;
 }
 .sidebar .menu .dropdown-menu {
-  background-color: #000;
   position: absolute;
-  bottom: -90px;
+  top: 37px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -461,7 +472,7 @@ nav .input-toggler:checked ~ .sidebar-overlay {
           flex-direction: column;
   display: none;
   z-index: 99;
-  padding: 10px;
+  padding-top: 10px;
 }
 @media all and (max-width: 769px) {
   .sidebar .menu .dropdown-menu {
@@ -470,86 +481,183 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   }
 }
 .sidebar .menu .dropdown-menu li {
-  padding-bottom: 5px;
+  padding: 4px 0;
+  margin-bottom: 5px;
+}
+.sidebar .menu .dropdown-menu li:nth-of-type(1) {
+  background-color: rgba(185, 55, 59, 0.7411764706);
+}
+.sidebar .menu .dropdown-menu li:nth-of-type(2) {
+  background-color: rgba(151, 151, 151, 0.6431372549);
+}
+.sidebar .menu .dropdown-menu li a {
+  color: rgb(233, 233, 233);
 }
 .sidebar .user-account {
-  border: 1px solid #B9373C;
+  border: 1px solid rgba(185, 55, 59, 0.7411764706);
   border-radius: 20px;
   position: absolute;
   right: 30px;
   top: 30px;
-  -webkit-transition: all 0.35s ease-in;
-  transition: all 0.35s ease-in;
+  background-color: transparent;
+  -webkit-transition: background-color 0.4s ease;
+  transition: background-color 0.4s ease;
 }
-.sidebar .user-account > div {
+.sidebar .user-account div {
   display: inline-block;
 }
-.sidebar .user-account > div.user {
+.sidebar .user-account div.user {
   padding: 10px 20px;
-  color: #fff;
-}
-.sidebar .user-account > div a {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #B9373C;
-  color: #fff;
   border-radius: 18px;
+  color: rgb(233, 233, 233);
+  display: none;
 }
-.sidebar .user-account > div:first-of-type a {
+.sidebar .user-account div.user-login {
+  display: inline-block;
+}
+.sidebar .user-account div.user-login a {
   padding: 10px 25px;
 }
-.sidebar .user-account > div:nth-of-type(2) a {
+.sidebar .user-account div.user-regist {
+  display: inline-block;
+}
+.sidebar .user-account div.user-regist a {
   background-color: transparent;
 }
-.sidebar .user-account > div.account-sub {
-  display: block;
+.sidebar .user-account div a {
+  display: inline-block;
+  padding: 8px 20px;
+  background-color: rgba(185, 55, 59, 0.7411764706);
+  border-radius: 18px;
+}
+.sidebar .user-account div.account-sub {
+  display: none;
   text-align: center;
   height: 0;
   overflow: hidden;
   width: 100%;
-  -webkit-transition: all 0.35s ease-in;
-  transition: all 0.35s ease-in;
+  -webkit-transition: height 0.4s cubic-bezier(0.56, 0, 0, 1);
+  transition: height 0.4s cubic-bezier(0.56, 0, 0, 1);
 }
-.sidebar .user-account > div.account-sub.animate-delay {
+.sidebar .user-account div.account-sub hr {
+  width: 80%;
+  margin: 0 auto 10px auto;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
+  transition: -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
+  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1);
+  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1), -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
+}
+.sidebar .user-account div.account-sub a {
+  display: block;
+  background-color: transparent;
+  opacity: 0;
+  overflow: hidden;
+  -webkit-transform: translate(0px, -5px);
+          transform: translate(0px, -5px);
+  -webkit-transition: opacity 0.6s ease, -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
+  transition: opacity 0.6s ease, -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
+  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1), opacity 0.6s ease;
+  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1), opacity 0.6s ease, -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
+}
+.sidebar .user-account.-active {
+  background-color: rgba(185, 55, 59, 0.7411764706);
+  -webkit-transition-delay: 0.2s;
+          transition-delay: 0.2s;
+}
+.sidebar .user-account.-active .account-sub {
+  height: 140px;
+  -webkit-transition-delay: 0.1s;
+          transition-delay: 0.1s;
+}
+.sidebar .user-account.-active .account-sub hr {
+  -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+  -webkit-transform-origin: left;
+          transform-origin: left;
+  -webkit-transition-delay: 0.3s;
+          transition-delay: 0.3s;
+}
+.sidebar .user-account.-active .account-sub a {
+  -webkit-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+  opacity: 1;
+}
+.sidebar .user-account.-active .account-sub a:nth-of-type(1) {
+  -webkit-transition-delay: 0.8s;
+          transition-delay: 0.8s;
+}
+.sidebar .user-account.-active .account-sub a:nth-of-type(2) {
   -webkit-transition-delay: 1s;
           transition-delay: 1s;
 }
-.sidebar .user-account > div.account-sub hr {
-  width: 0;
-  opacity: 0;
-  margin: 5px auto 10px auto;
-  -webkit-transition: all 0.35s ease-in;
-  transition: all 0.35s ease-in;
+.sidebar .user-account.-active .account-sub a:nth-of-type(3) {
+  -webkit-transition-delay: 1.2s;
+          transition-delay: 1.2s;
 }
-.sidebar .user-account > div.account-sub hr.animate-delay-1-5 {
-  -webkit-transition-delay: 1.5s;
-          transition-delay: 1.5s;
-}
-.sidebar .user-account > div.account-sub a {
-  display: block;
+.sidebar .user-account.-leave {
   background-color: transparent;
+  -webkit-transition: background-color 0.4s cubic-bezier(0.56, 0, 0, 1) 1.3s;
+  transition: background-color 0.4s cubic-bezier(0.56, 0, 0, 1) 1.3s;
+}
+.sidebar .user-account.-leave .account-sub {
+  -webkit-transition: height 0.4s cubic-bezier(0.56, 0, 0, 1) 1s;
+  transition: height 0.4s cubic-bezier(0.56, 0, 0, 1) 1s;
+  height: 0;
+}
+.sidebar .user-account.-leave .account-sub hr {
+  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1) 0.9s;
+  transition: -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1) 0.9s;
+  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1) 0.9s;
+  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1) 0.9s, -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1) 0.9s;
+  -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transform-origin: right;
+          transform-origin: right;
+}
+.sidebar .user-account.-leave .account-sub a {
+  -webkit-transition: opacity 0.6s ease, -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
+  transition: opacity 0.6s ease, -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
+  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1), opacity 0.6s ease;
+  transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1), opacity 0.6s ease, -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
+  -webkit-transform: translate(0px, -5px);
+          transform: translate(0px, -5px);
+  opacity: 0;
+}
+.sidebar .user-account.-leave .account-sub a:nth-of-type(1) {
+  -webkit-transition-delay: 0.7s;
+          transition-delay: 0.7s;
+}
+.sidebar .user-account.-leave .account-sub a:nth-of-type(2) {
+  -webkit-transition-delay: 0.5s;
+          transition-delay: 0.5s;
+}
+.sidebar .user-account.-leave .account-sub a:nth-of-type(3) {
+  -webkit-transition-delay: 0.2s;
+          transition-delay: 0.2s;
+}
+.sidebar .user-account.isUser {
+  background-color: rgba(185, 55, 59, 0.7411764706);
+}
+.sidebar .user-account.isUser .account-sub {
+  display: block;
+}
+.sidebar .user-account.isUser .user {
+  display: block;
+}
+.sidebar .user-account.isUser .user-login, .sidebar .user-account.isUser .user-regist {
+  display: none;
+}
+.sidebar .user-account.isUser:hover {
+  background-color: rgba(185, 55, 59, 0.7411764706);
 }
 .sidebar .user-account:hover {
-  background-color: #B9373C;
+  background-color: transparent;
 }
 
 /* other share */
 a.event-disable {
   pointer-events: none;
   cursor: default;
-}
-
-.animate-delay-0-5 {
-  -webkit-transition-delay: 0.5s;
-          transition-delay: 0.5s;
-}
-
-.animate-delay {
-  -webkit-transition-delay: 1s;
-          transition-delay: 1s;
-}
-
-.animate-delay-1-5 {
-  -webkit-transition-delay: 1.5s;
-          transition-delay: 1.5s;
 }
