--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,14 @@
 #landing {
   position: relative;
-  z-index: 200;
   width: 100%;
 }
 #landing .landing-page {
   height: 100vh;
   width: 100%;
   background-color: #000;
+  background-image: url(https://picsum.photos/1920/500);
+  background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
 }
 #landing .landing-page h1 {
@@ -15,7 +17,7 @@
   display: flex;
   width: 100%;
   color: #fff;
-  font-size: 7rem;
+  font-size: 8rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -34,7 +36,7 @@
   cursor: pointer;
   position: absolute;
   bottom: 150px;
-  left: 15%;
+  left: 15vw;
 }
 #landing .landing-page .welcome .text-round {
   width: 100%;
@@ -60,7 +62,7 @@
 #landing .landing-page .welcome .mouse .scroller {
   width: 3px;
   height: 8px;
-  border: 1px solid #fff;
+  border: 1px solid rgb(233, 233, 233);
   border-radius: 25%;
   position: absolute;
   top: 13px;
@@ -69,25 +71,9 @@
           animation: scroll 1s ease-in infinite;
 }
 
-#main-content .s1, #main-content .s2, #main-content .s3 {
-  background: #fff;
-  padding-top: 80px;
-}
-
-.v-swiper {
-  background-color: #000;
-}
-.v-swiper .swiper-wrapper .swiper-slide:nth-of-type(2) {
-  -webkit-box-orient: inherit;
-  -webkit-box-direction: inherit;
-      -ms-flex-direction: inherit;
-          flex-direction: inherit;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-}
-.v-swiper .swiper-wrapper .s-swiper {
-  max-height: 500px;
+.section-box {
+  padding: 50px 0;
+  margin-top: 80px;
 }
 
 @-webkit-keyframes rotate {
