--- a/scss/global.scss
+++ b/scss/global.scss
@@ -4,7 +4,7 @@
 html {
   // line-height: 1.15;
   -webkit-text-size-adjust: 100%;
-  letter-spacing: 2px;
+  letter-spacing: 1.5px;
   font-size: 16px;
   position: relative;
   background-color: v.$bg-color;
@@ -13,7 +13,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-size: 16px;
+  font-size: 17px;
   position: relative;
   background-color: v.$bg-color;
 }
@@ -43,9 +43,15 @@ pre {
 }
 
 a {
-  color: v.$link;
   background-color: transparent;
   text-decoration: none;
+  color: v.$font-primary;
+  font-weight: normal;
+  transition: color .3s ease,font-weight .4s ease;
+  &:hover{
+    color: v.$white;
+    font-weight: bolder;
+  }
 }
 
 abbr[title] {
@@ -268,7 +274,7 @@ nav {
   left: 0;
   padding: 20px 0;
   transition: all .5s;
-  z-index: 10;
+  z-index: 0;
   background-color: #000;
   opacity: 1;
 
@@ -305,7 +311,7 @@ nav {
     .menu-toggler-line {
       width: 100%;
       height: 2px;
-      background: v.$primary;
+      background: v.$primary-opacity;
       margin: 0 0 8px 0px;
       position: relative;
       transition: all .35s ease-out;
@@ -379,16 +385,17 @@ nav {
   }
 
   .menu {
-    flex: 5;
-    // background-color: #000;
+    flex: 3;
     transition: all .35s ease-out;
 
-    li {
-      display: inline-flex;
-      justify-content: space-between;
-
+    >li {
+      display: inline-block;
+      width: 12%;
+      text-align: center;
+      position: relative;
       &:hover {
         & .dropdown-menu {
+          width: 100%;
           display: flex;
         }
       }
@@ -402,31 +409,36 @@ nav {
     .menu-link {
       position: relative;
       display: inline-block;
-      padding: 20px;
-      color: white;
+      text-align: center;
+      padding: 10px;
+      color: v.$font-primary;
+      transition: color .4s ease,font-weight .4s ease; 
 
       &:hover {
-        color: v.$primary;
+        color: v.$white;
+        font-weight: bolder;
       }
 
       &:focus {
-        color: v.$primary;
+        color: v.$white;
+        font-weight: bold;
       }
 
       &:active {
-        color: v.$primary;
+        color: v.$white;
+        font-weight: bold;
       }
     }
 
     .dropdown-menu {
-      background-color: #000;
       position: absolute;
-      bottom: -90px;
+      top: 37px;
       display: flex;
       flex-direction: column;
       display: none;
       z-index: 99;
-      padding: 10px;
+      padding-top: 10px;
+      
 
       @include v.phone-width {
         position: static;
@@ -434,81 +446,165 @@ nav {
       }
 
       li {
-        padding-bottom: 5px;
+        padding: 4px 0;
+        margin-bottom: 5px;
+        &:nth-of-type(1){
+          background-color: v.$primary-opacity;
+        }
+        &:nth-of-type(2){
+          background-color: #979797a4;
+        }
+        a{
+          color: v.$font-primary;
+        }
       }
     }
   }
 
   .user-account {
-    border: 1px solid #B9373C;
+    border: 1px solid v.$primary-opacity;
     border-radius: 20px;
     position: absolute;
     right: 30px;
-    top: 30px;
-    transition: all 0.35s ease-in;
+    top:30px;
+    background-color: transparent;
+    transition:background-color 0.4s ease;
 
-    &>div {
+    div {
       display: inline-block;
 
       &.user {
         padding: 10px 20px;
-        color: #fff;
-      }
-
-      a {
-        display: inline-block;
-        padding: 10px 20px;
-        background-color: #B9373C;
-        color: #fff;
         border-radius: 18px;
+        color: v.$font-primary;
+        display: none;
       }
-
-      &:first-of-type {
+      &.user-login {
+        display: inline-block;
         a {
           padding: 10px 25px;
         }
       }
-
-      &:nth-of-type(2) {
+      &.user-regist {
+        display: inline-block;
         a {
           background-color: transparent;
         }
       }
 
+      a {
+        display: inline-block;
+        padding: 8px 20px;
+        background-color: v.$primary-opacity;
+        border-radius: 18px;
+      }
+
       &.account-sub {
-        display: block;
+        display: none;
         text-align: center;
         height: 0;
         overflow: hidden;
         width: 100%;
-        transition: all 0.35s ease-in;
-
-        &.animate-delay {
-          transition-delay: 1s;
-        }
+        transition: height 0.4s cubic-bezier(.56, 0, 0, 1);
 
         hr {
-          width: 0;
-          opacity: 0;
-          margin: 5px auto 10px auto;
-          transition: all 0.35s ease-in;
-
-          &.animate-delay-1-5 {
-            transition-delay: 1.5s;
-          }
+          width: 80%;
+          margin: 0 auto 10px auto;
+          transform: scaleX(0);
+          transition: transform 0.4s cubic-bezier(.56, 0, 0, 1)
         }
 
         a {
           display: block;
           background-color: transparent;
-          // transform: translate(0px, -10px);
-          // transition: all 0.35s ease-in 0.3s; 
+          opacity: 0;
+          overflow: hidden;
+          transform: translate(0px, -5px);
+          transition: transform 0.4s cubic-bezier(.56, 0, 0, 1), opacity 0.6s ease;
+          
         }
       }
     }
 
-    &:hover {
-      background-color: #B9373C;
+    &.-active {
+      background-color: v.$primary-opacity;
+      transition-delay: .2s;
+
+      .account-sub {
+        height: 140px;
+        transition-delay: .1s;
+        
+        hr {
+          transform: scaleX(1);
+          transform-origin: left;
+          transition-delay: .3s;
+        }
+
+        a {
+          transform: translate(0px, 0px);
+          opacity: 1;
+
+          &:nth-of-type(1) {
+            transition-delay: .8s;
+          }
+
+          &:nth-of-type(2) {
+            transition-delay: 1s;
+          }
+
+          &:nth-of-type(3) {
+            transition-delay: 1.2s
+          }
+        }
+
+      }
+    }
+
+    &.-leave {
+      background-color: transparent;
+      transition:background-color 0.4s cubic-bezier(.56, 0, 0, 1) 1.3s;
+
+       .account-sub {
+        transition: height 0.4s cubic-bezier(.56, 0, 0, 1) 1s;
+        height: 0;
+
+        hr {
+          transition: transform 0.4s cubic-bezier(.56, 0, 0, 1) 0.9s;
+          transform: scaleX(0);
+          transform-origin: right;
+        }
+
+        a {
+          transition: transform 0.4s cubic-bezier(.56, 0, 0, 1), opacity 0.6s ease;
+          transform: translate(0px, -5px);
+          opacity: 0;
+
+          &:nth-of-type(1) {
+            transition-delay: .7s;
+          }
+
+          &:nth-of-type(2) {
+            transition-delay: .5s;
+          }
+
+          &:nth-of-type(3) {
+            transition-delay: .2s
+          }
+        }
+
+      }
+    }
+    &.isUser{
+      background-color: v.$primary-opacity;
+      .account-sub{display: block;}
+      .user{display: block;}
+      .user-login,.user-regist{display: none;}
+       &:hover{
+      background-color: v.$primary-opacity;
+    }
+    }
+    &:hover{
+      background-color: transparent
     }
   }
 }
@@ -517,16 +613,4 @@ nav {
 a.event-disable {
   pointer-events: none;
   cursor: default;
-}
-
-.animate-delay-0-5 {
-  transition-delay: .5s;
-}
-
-.animate-delay {
-  transition-delay: 1s;
-}
-
-.animate-delay-1-5 {
-  transition-delay: 1.5s;
 }
