--- a/css/global.css
+++ b/css/global.css
@@ -14,6 +14,9 @@ body {
   position: relative;
   background-color: #000;
 }
+body.no-scroll {
+  overflow: hidden;
+}
 
 main {
   display: block;
@@ -280,23 +283,15 @@ li {
     height: 123px;
   }
 }
-/* gobal */
-#app {
-  position: relative;
-  background-color: #000;
-}
-
 /* nav */
 nav {
-  position: fixed;
   width: 100%;
   top: 0;
   left: 0;
   padding: 20px 0;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
-  z-index: 0;
-  background-color: #000;
+  z-index: 5;
   opacity: 1;
 }
 nav.mini {
@@ -499,6 +494,7 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   position: absolute;
   right: 30px;
   top: 30px;
+  z-index: 2;
   background-color: transparent;
   -webkit-transition: background-color 0.4s ease;
   transition: background-color 0.4s ease;
