--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 #landing {
   position: relative;
   width: 100%;
+  z-index: 10;
 }
 #landing .landing-page {
   height: 100vh;
@@ -9,28 +10,24 @@
   background-image: url(https://picsum.photos/1920/500);
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
+  -webkit-animation: blur 2s ease-out;
+          animation: blur 2s ease-out;
 }
-#landing .landing-page h1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
+#landing h1 {
+  display: block;
   color: #fff;
   font-size: 8rem;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-align: right;
-  height: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
-#landing .landing-page h1 span {
+#landing h1 div {
   display: block;
+  text-align: right;
 }
-#landing .landing-page .welcome {
+#landing .welcome {
   width: 224px;
   height: 224px;
   cursor: pointer;
@@ -38,7 +35,7 @@
   bottom: 150px;
   left: 15vw;
 }
-#landing .landing-page .welcome .text-round {
+#landing .welcome .text-round {
   width: 100%;
   height: 100%;
   background: url(../image/svg/welcome-round.svg);
@@ -47,7 +44,7 @@
   -webkit-animation: rotate 10s infinite linear;
           animation: rotate 10s infinite linear;
 }
-#landing .landing-page .welcome .mouse {
+#landing .welcome .mouse {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -59,7 +56,7 @@
   background-repeat: no-repeat;
   background-size: contain;
 }
-#landing .landing-page .welcome .mouse .scroller {
+#landing .welcome .mouse .scroller {
   width: 3px;
   height: 8px;
   border: 1px solid rgb(233, 233, 233);
@@ -71,9 +68,15 @@
           animation: scroll 1s ease-in infinite;
 }
 
-.section-box {
-  padding: 50px 0;
-  margin-top: 80px;
+.start-scroll #landing .landing-page {
+  height: 0;
+  -webkit-transition: height 0.6s cubic-bezier(0.76, -0.24, 0.55, 0.91);
+  transition: height 0.6s cubic-bezier(0.76, -0.24, 0.55, 0.91);
+  -webkit-transform-origin: top center;
+          transform-origin: top center;
+}
+.start-scroll #landing h1, .start-scroll #landing .welcome {
+  display: none;
 }
 
 @-webkit-keyframes rotate {
@@ -119,5 +122,25 @@
     -webkit-transform: translateY(8px);
             transform: translateY(8px);
     opacity: 0;
+  }
+}
+@-webkit-keyframes blur {
+  0% {
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+  }
+  100% {
+    filter: blur(0px);
+    -webkit-filter: blur(0px);
+  }
+}
+@keyframes blur {
+  0% {
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+  }
+  100% {
+    filter: blur(0px);
+    -webkit-filter: blur(0px);
   }
 }
