--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,7 +1,10 @@
-@use "variables" as v;
+@use "variables"as v;
+
 #landing {
-  position: relative;
+  position: relative; //for swiper
   width: 100%;
+  z-index: 10;
+  // position: fixed;
 
   .landing-page {
     height: 100vh;
@@ -10,65 +13,80 @@
     background-image: url(https://picsum.photos/1920/500);
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    animation: blur 2s ease-out;
+  }
 
-    h1 {
-      display: flex;
-      width: 100%;
-      color: v.$white;
-      font-size: 8rem;
-      justify-content: center;
+  h1 {
+    display: block;
+    color: v.$white;
+    font-size: 8rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    div {
+      display: block;
       text-align: right;
-      height: 100%;
-      align-items: center;
-    
-      span {
-        display: block;
-      }
     }
-    .welcome {
-      width: 224px;
-      height: 224px;
-      cursor: pointer;
-      position: absolute;
-      bottom: 150px;
-      left: 15vw;
+  }
 
-      .text-round {
-        width: 100%;
-        height: 100%;
-        background: url(../image/svg/welcome-round.svg);
-        background-repeat: no-repeat;
-        background-size: contain;
-        animation: rotate 10s infinite linear;
-      } 
-      .mouse {
+  .welcome {
+    width: 224px;
+    height: 224px;
+    cursor: pointer;
+    position: absolute;
+    bottom: 150px;
+    left: 15vw;
+
+    .text-round {
+      width: 100%;
+      height: 100%;
+      background: url(../image/svg/welcome-round.svg);
+      background-repeat: no-repeat;
+      background-size: contain;
+      animation: rotate 10s infinite linear;
+    }
+
+    .mouse {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 34px;
+      height: 53px;
+      background: url(../image/svg/mouse.svg);
+      background-repeat: no-repeat;
+      background-size: contain;
+
+      .scroller {
+        width: 3px;
+        height: 8px;
+        border: 1px solid v.$font-primary;
+        border-radius: 25%;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 34px;
-        height: 53px;
-        background: url(../image/svg/mouse.svg);
-        background-repeat: no-repeat;
-        background-size: contain;
-        .scroller{
-          width: 3px;
-          height: 8px;
-          border: 1px solid v.$font-primary;
-          border-radius: 25%;
-          position: absolute;
-          top: 13px;
-          left: 14px;
-          animation: scroll 1s ease-in infinite;
-        }
+        top: 13px;
+        left: 14px;
+        animation: scroll 1s ease-in infinite;
       }
     }
   }
 }
-.section-box{
-  padding: 50px 0;
-  margin-top: 80px;
+
+.start-scroll {
+  #landing {
+
+    .landing-page {
+      height: 0;
+      transition: height .6s cubic-bezier(.76, -0.24, .55, .91);
+      transform-origin: top center;
+    }
+    h1,.welcome{display: none;}
+  }
+}
+
+.section-box {
+  // margin-top: 100px;
 }
 
 
@@ -78,11 +96,32 @@
   0% {
     transform: rotate(0);
   }
+
   100% {
     transform: rotate(360deg);
   }
 }
+
 @keyframes scroll {
-  0% { transform: translateY(0);opacity: 1; }
-  100% { transform: translateY(8px);opacity: 0; }
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateY(8px);
+    opacity: 0;
+  }
+}
+
+@keyframes blur {
+  0% {
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+  }
+
+  100% {
+    filter: blur(0px);
+    -webkit-filter: blur(0px);
+  }
 }
