--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,10 +1,10 @@
 @use "variables"as v;
 
 #landing {
-  position: relative; //for swiper
+  //position: relative; //for swiper
   width: 100%;
   z-index: 10;
-  // position: fixed;
+  position: fixed;
 
   .landing-page {
     height: 100vh;
@@ -75,13 +75,17 @@
 
 .start-scroll {
   #landing {
-
     .landing-page {
       height: 0;
-      transition: height .6s cubic-bezier(.76, -0.24, .55, .91);
+      transition: height 1s cubic-bezier(.76, -0.24, .55, .91);
       transform-origin: top center;
     }
     h1,.welcome{display: none;}
+  }
+  nav{
+    opacity: 1;
+    transition: opacity .5s cubic-bezier(.76, -0.24, .55, .91) .8s;
+
   }
 }
 
