--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 #landing {
-  position: relative;
   width: 100%;
   z-index: 10;
+  position: fixed;
 }
 #landing .landing-page {
   height: 100vh;
@@ -70,13 +70,18 @@
 
 .start-scroll #landing .landing-page {
   height: 0;
-  -webkit-transition: height 0.6s cubic-bezier(0.76, -0.24, 0.55, 0.91);
-  transition: height 0.6s cubic-bezier(0.76, -0.24, 0.55, 0.91);
+  -webkit-transition: height 1s cubic-bezier(0.76, -0.24, 0.55, 0.91);
+  transition: height 1s cubic-bezier(0.76, -0.24, 0.55, 0.91);
   -webkit-transform-origin: top center;
           transform-origin: top center;
 }
 .start-scroll #landing h1, .start-scroll #landing .welcome {
   display: none;
+}
+.start-scroll nav {
+  opacity: 1;
+  -webkit-transition: opacity 0.5s cubic-bezier(0.76, -0.24, 0.55, 0.91) 0.8s;
+  transition: opacity 0.5s cubic-bezier(0.76, -0.24, 0.55, 0.91) 0.8s;
 }
 
 @-webkit-keyframes rotate {
