--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,6 +6,8 @@ $white:#fff;
 $font-primary:rgb(233, 233, 233);
 $bg-color:#000;
 
+$max-width:1500px;
+
 $pc-media:992px;
 $pcs-media:991px;
 $phone-media:769px;
