--- a/css/global.css
+++ b/css/global.css
@@ -10,12 +10,17 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-size: 17px;
+  font-size: 15px;
   position: relative;
   background-color: #000;
 }
 body.no-scroll {
   overflow: hidden;
+}
+@media all and (min-width: 992px) {
+  body {
+    font-size: 17px;
+  }
 }
 
 main {
@@ -286,6 +291,8 @@ li {
 /* nav */
 nav {
   width: 100%;
+  max-width: 1500px;
+  margin: 0 auto;
   top: 0;
   left: 0;
   padding: 20px 0;
@@ -320,6 +327,13 @@ nav .menu-toggler {
           flex-direction: column;
   cursor: pointer;
 }
+@media all and (min-width: 768px) and (max-width: 991px) {
+  nav .menu-toggler {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
 @media all and (max-width: 769px) {
   nav .menu-toggler {
     display: -webkit-box;
@@ -335,6 +349,16 @@ nav .menu-toggler .menu-toggler-line {
   position: relative;
   -webkit-transition: all 0.35s ease-out;
   transition: all 0.35s ease-out;
+}
+@media all and (min-width: 768px) and (max-width: 991px) {
+  nav .input-toggler ~ .sidebar .menu {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: -300px;
+    width: 300px;
+    z-index: 999;
+  }
 }
 @media all and (max-width: 769px) {
   nav .input-toggler ~ .sidebar .menu {
@@ -395,9 +419,9 @@ nav .input-toggler:checked ~ .sidebar-overlay {
 }
 .sidebar .nav-brand {
   padding: 20px;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -webkit-box-flex: 0.5;
+      -ms-flex: 0.5;
+          flex: 0.5;
 }
 .sidebar .menu {
   -webkit-box-flex: 3;
@@ -637,7 +661,8 @@ nav .input-toggler:checked ~ .sidebar-overlay {
 .sidebar .user-account.isUser .user {
   display: block;
 }
-.sidebar .user-account.isUser .user-login, .sidebar .user-account.isUser .user-regist {
+.sidebar .user-account.isUser .user-login,
+.sidebar .user-account.isUser .user-regist {
   display: none;
 }
 .sidebar .user-account.isUser:hover {
@@ -647,8 +672,86 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   background-color: transparent;
 }
 
+/* share style */
+.section-box .main-title {
+  margin-bottom: 30px;
+}
+.section-box .main-title div {
+  margin: 0;
+}
+.section-box .main-title div:nth-of-type(1) {
+  font-weight: 100;
+  font-size: 0.9rem;
+}
+.section-box .main-title div:nth-of-type(1)::before {
+  content: "";
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #b9373b;
+  margin-right: 5px;
+  margin-bottom: 2px;
+}
+.section-box .main-title div:nth-of-type(2) {
+  color: #b9373b;
+  font-weight: 600;
+  margin-left: 10px;
+}
+.section-box .section {
+  color: #fff;
+  max-width: 1500px;
+  margin: 80px auto 50px auto;
+  padding: 0 30px;
+}
+.section-box .section .content-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.section-box .section .content-row .row-2 {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+.section-box .section .content-row .row-5 {
+  -ms-flex-preferred-size: 20%;
+      flex-basis: 20%;
+}
+
+footer {
+  background-color: #fff;
+}
+footer > div {
+  max-width: 1500px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px;
+}
+
 /* other share */
 a.event-disable {
   pointer-events: none;
   cursor: default;
+}
+
+.small-font {
+  font-size: 0.9rem;
+}
+
+.bigger-font {
+  font-size: 1.3rem;
 }
