--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,4 +1,4 @@
-@use 'variables'as v;
+@use "variables" as v;
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html {
@@ -13,11 +13,14 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-size: 17px;
+   font-size: 15px;
   position: relative;
   background-color: v.$bg-color;
-  &.no-scroll{
+  &.no-scroll {
     overflow: hidden;
+  }
+  @include v.pc-width {
+    font-size: 17px;
   }
 }
 
@@ -50,8 +53,8 @@ a {
   text-decoration: none;
   color: v.$font-primary;
   font-weight: normal;
-  transition: color .3s ease,font-weight .4s ease;
-  &:hover{
+  transition: color 0.3s ease, font-weight 0.4s ease;
+  &:hover {
     color: v.$white;
     font-weight: bolder;
   }
@@ -148,11 +151,9 @@ button:-moz-focusring,
   outline: 1px dotted ButtonText;
 }
 
-
 fieldset {
   padding: 0.35em 0.75em 0.625em;
 }
-
 
 legend {
   box-sizing: border-box;
@@ -238,7 +239,6 @@ li {
   list-style: none;
 }
 
-
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -263,17 +263,19 @@ li {
   }
 }
 
-
 /* nav */
 nav {
   // position: fixed;
   width: 100%;
+  max-width: v.$max-width;
+  margin: 0 auto;
   top: 0;
   left: 0;
   padding: 20px 0;
-  transition: all .5s;
+  transition: all 0.5s;
   z-index: 5;
   opacity: 0;
+  
 
   &.mini {
     padding: 10px 0;
@@ -296,6 +298,9 @@ nav {
     flex-direction: column;
     cursor: pointer;
 
+    @include v.pad-width {
+      display: flex;
+    }
     @include v.phone-width {
       display: flex;
     }
@@ -306,12 +311,19 @@ nav {
       background: v.$primary-opacity;
       margin: 0 0 8px 0px;
       position: relative;
-      transition: all .35s ease-out;
+      transition: all 0.35s ease-out;
     }
   }
 
   .input-toggler {
-    &~.sidebar .menu {
+    & ~ .sidebar .menu {
+      @include v.pad-width { 
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: -300px;
+        width: 300px;
+        z-index: 999;}
       @include v.phone-width {
         position: absolute;
         top: 0;
@@ -320,9 +332,10 @@ nav {
         width: 300px;
         z-index: 999;
       }
+      
     }
 
-    &~.sidebar-overlay {
+    & ~ .sidebar-overlay {
       position: absolute;
       background-color: #000;
       width: 100%;
@@ -330,40 +343,38 @@ nav {
       top: 0;
       opacity: 0;
       display: none;
-      transition: all .45s ease-out;
+      transition: all 0.45s ease-out;
       z-index: 999;
     }
 
     &:checked {
-      &~.menu-toggler .menu-toggler-line {
+      & ~ .menu-toggler .menu-toggler-line {
         top: 5px;
         transform: translateY(100px);
         transform: rotate(45deg);
       }
 
-      &~.menu-toggler .menu-toggler-line:nth-child(2) {
+      & ~ .menu-toggler .menu-toggler-line:nth-child(2) {
         display: none;
       }
 
-      &~.menu-toggler .menu-toggler-line:nth-child(3) {
+      & ~ .menu-toggler .menu-toggler-line:nth-child(3) {
         top: -5px;
         transform: translateY(10);
         transform: rotate(135deg);
       }
 
-      &~.sidebar .menu {
+      & ~ .sidebar .menu {
         left: 0;
       }
 
-      &~.sidebar-overlay {
+      & ~ .sidebar-overlay {
         display: block;
         opacity: 0.9;
       }
     }
   }
 }
-
-
 .sidebar {
   // max-width: 1200px;
   display: flex;
@@ -374,14 +385,14 @@ nav {
 
   .nav-brand {
     padding: 20px;
-    flex: 1;
+    flex: 0.5;
   }
 
   .menu {
     flex: 3;
-    transition: all .35s ease-out;
+    transition: all 0.35s ease-out;
 
-    >li {
+    > li {
       display: inline-block;
       width: 12%;
       text-align: center;
@@ -405,7 +416,7 @@ nav {
       text-align: center;
       padding: 10px;
       color: v.$font-primary;
-      transition: color .4s ease,font-weight .4s ease; 
+      transition: color 0.4s ease, font-weight 0.4s ease;
 
       &:hover {
         color: v.$white;
@@ -431,7 +442,6 @@ nav {
       display: none;
       z-index: 99;
       padding-top: 10px;
-      
 
       @include v.phone-width {
         position: static;
@@ -441,13 +451,13 @@ nav {
       li {
         padding: 4px 0;
         margin-bottom: 5px;
-        &:nth-of-type(1){
+        &:nth-of-type(1) {
           background-color: v.$primary-opacity;
         }
-        &:nth-of-type(2){
+        &:nth-of-type(2) {
           background-color: #979797a4;
         }
-        a{
+        a {
           color: v.$font-primary;
         }
       }
@@ -459,10 +469,10 @@ nav {
     border-radius: 20px;
     position: absolute;
     right: 30px;
-    top:30px;
+    top: 30px;
     z-index: 2;
     background-color: transparent;
-    transition:background-color 0.4s ease;
+    transition: background-color 0.4s ease;
 
     div {
       display: inline-block;
@@ -470,7 +480,7 @@ nav {
       &.user {
         padding: 10px 20px;
         border-radius: 18px;
-        color: v.$font-primary;
+        color: v.$font-primary; 
         display: none;
       }
       &.user-login {
@@ -499,13 +509,13 @@ nav {
         height: 0;
         overflow: hidden;
         width: 100%;
-        transition: height 0.4s cubic-bezier(.56, 0, 0, 1);
+        transition: height 0.4s cubic-bezier(0.56, 0, 0, 1);
 
         hr {
           width: 80%;
           margin: 0 auto 10px auto;
           transform: scaleX(0);
-          transition: transform 0.4s cubic-bezier(.56, 0, 0, 1)
+          transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1);
         }
 
         a {
@@ -514,24 +524,24 @@ nav {
           opacity: 0;
           overflow: hidden;
           transform: translate(0px, -5px);
-          transition: transform 0.4s cubic-bezier(.56, 0, 0, 1), opacity 0.6s ease;
-          
-        }
+          transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1),
+            opacity 0.6s ease;
+        } 
       }
     }
 
     &.-active {
       background-color: v.$primary-opacity;
-      transition-delay: .2s;
+      transition-delay: 0.2s;
 
       .account-sub {
         height: 140px;
-        transition-delay: .1s;
-        
+        transition-delay: 0.1s;
+
         hr {
           transform: scaleX(1);
           transform-origin: left;
-          transition-delay: .3s;
+          transition-delay: 0.3s;
         }
 
         a {
@@ -539,7 +549,7 @@ nav {
           opacity: 1;
 
           &:nth-of-type(1) {
-            transition-delay: .8s;
+            transition-delay: 0.8s;
           }
 
           &:nth-of-type(2) {
@@ -547,60 +557,130 @@ nav {
           }
 
           &:nth-of-type(3) {
-            transition-delay: 1.2s
+            transition-delay: 1.2s;
           }
         }
-
       }
     }
 
     &.-leave {
       background-color: transparent;
-      transition:background-color 0.4s cubic-bezier(.56, 0, 0, 1) 1.3s;
+      transition: background-color 0.4s cubic-bezier(0.56, 0, 0, 1) 1.3s;
 
-       .account-sub {
-        transition: height 0.4s cubic-bezier(.56, 0, 0, 1) 1s;
+      .account-sub {
+        transition: height 0.4s cubic-bezier(0.56, 0, 0, 1) 1s;
         height: 0;
 
         hr {
-          transition: transform 0.4s cubic-bezier(.56, 0, 0, 1) 0.9s;
+          transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1) 0.9s;
           transform: scaleX(0);
           transform-origin: right;
         }
 
         a {
-          transition: transform 0.4s cubic-bezier(.56, 0, 0, 1), opacity 0.6s ease;
+          transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1),
+            opacity 0.6s ease;
           transform: translate(0px, -5px);
           opacity: 0;
 
           &:nth-of-type(1) {
-            transition-delay: .7s;
+            transition-delay: 0.7s;
           }
 
           &:nth-of-type(2) {
-            transition-delay: .5s;
+            transition-delay: 0.5s;
           }
 
           &:nth-of-type(3) {
-            transition-delay: .2s
+            transition-delay: 0.2s;
           }
         }
-
       }
     }
-    &.isUser{
+    &.isUser {
       background-color: v.$primary-opacity;
-      .account-sub{display: block;}
-      .user{display: block;}
-      .user-login,.user-regist{display: none;}
-       &:hover{
-      background-color: v.$primary-opacity;
+      .account-sub {
+        display: block;
+      }
+      .user {
+        display: block;
+      }
+      .user-login,
+      .user-regist {
+        display: none;
+      }
+      &:hover {
+        background-color: v.$primary-opacity;
+      }
     }
+    &:hover {
+      background-color: transparent;
     }
-    &:hover{
-      background-color: transparent
+
+  }
+}
+
+/* share style */
+.section-box {
+  .main-title {
+    margin-bottom: 30px;
+    div {
+      margin: 0;
+      &:nth-of-type(1) {
+        font-weight: 100;
+        font-size: 0.9rem;
+        &::before {
+          content: "";
+          display: inline-block;
+          width: 5px;
+          height: 5px;
+          border-radius: 50%;
+          background-color: v.$primary;
+          margin-right: 5px;
+          margin-bottom: 2px;
+        }
+      }
+      &:nth-of-type(2) {
+        color: v.$primary;
+        font-weight: 600;
+        margin-left: 10px;
+      }
     }
   }
+
+  .section {
+    color: v.$white;
+    max-width: v.$max-width;
+    margin: 80px auto 50px auto;
+    padding: 0 30px;
+    .content {
+      
+    }
+    .content-row{
+      display: flex;
+      flex-wrap: wrap;
+      .row-2{
+        flex-basis: 50%;
+      }
+      .row-5{
+        flex-basis: 20%;
+      }
+    }
+  }
+}
+
+footer {
+  background-color: #fff;
+  &>div{
+   max-width: v.$max-width;
+   margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  }
+ 
 }
 
 /* other share */
@@ -608,3 +688,10 @@ a.event-disable {
   pointer-events: none;
   cursor: default;
 }
+.small-font {
+  font-size: 0.9rem;
+}
+.bigger-font {
+  font-size: 1.3rem;
+}
+
