--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,4 +1,4 @@
-@use "variables"as v;
+@use "variables" as v;
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html {
@@ -35,7 +35,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
   margin: 0;
 }
 
@@ -279,7 +280,6 @@ nav {
   z-index: 5;
   opacity: 0;
 
-
   &.mini {
     padding: 10px 0;
   }
@@ -320,7 +320,7 @@ nav {
   }
 
   .input-toggler {
-    &~.sidebar .menu {
+    & ~ .sidebar .menu {
       @include v.pad-width {
         position: absolute;
         top: 0;
@@ -338,10 +338,9 @@ nav {
         width: 300px;
         z-index: 999;
       }
-
     }
 
-    &~.sidebar-overlay {
+    & ~ .sidebar-overlay {
       position: absolute;
       background-color: #000;
       width: 100%;
@@ -354,27 +353,27 @@ nav {
     }
 
     &:checked {
-      &~.menu-toggler .menu-toggler-line {
+      & ~ .menu-toggler .menu-toggler-line {
         top: 5px;
         transform: translateY(100px);
         transform: rotate(45deg);
       }
 
-      &~.menu-toggler .menu-toggler-line:nth-child(2) {
+      & ~ .menu-toggler .menu-toggler-line:nth-child(2) {
         display: none;
       }
 
-      &~.menu-toggler .menu-toggler-line:nth-child(3) {
+      & ~ .menu-toggler .menu-toggler-line:nth-child(3) {
         top: -5px;
         transform: translateY(10);
         transform: rotate(135deg);
       }
 
-      &~.sidebar .menu {
+      & ~ .sidebar .menu {
         left: 0;
       }
 
-      &~.sidebar-overlay {
+      & ~ .sidebar-overlay {
         display: block;
         opacity: 0.9;
       }
@@ -418,7 +417,7 @@ nav {
   .menu {
     transition: all 0.35s ease-out;
 
-    >li {
+    > li {
       display: inline-block;
       width: 12.5%;
       text-align: center;
@@ -659,7 +658,6 @@ nav {
     &:hover {
       background-color: transparent;
     }
-
   }
 }
 
@@ -700,8 +698,16 @@ nav {
     max-width: v.$max-width;
     margin: 80px auto 50px auto;
     padding: 0 30px;
+    @include v.pad-width {
+      padding: 0 15px;
+    }
 
-    .content {}
+    @include v.phone-width {
+      padding: 0 15px;
+    }
+
+    .content {
+    }
 
     .content-row {
       display: flex;
@@ -737,14 +743,14 @@ nav {
 footer {
   background-color: #fff;
 
-  &>div {
+  & > div {
     max-width: v.$max-width;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 20px 30px;
 
     @include v.pad-width {
       flex-direction: column;
@@ -765,10 +771,12 @@ footer {
       }
     }
   }
-
 }
 
 /* other share */
+:focus {
+  outline-width: 0px;
+}
 a.event-disable {
   pointer-events: none;
   cursor: default;
