--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,5 +1,29 @@
-@use "variables" as v;
+@use "variables"as v;
 
+//share
+.movie-title {
+  margin-top: 10px;
+  font-weight: bold;
+
+  span {
+    font-weight: 500;
+    display: block;
+    margin-top: 5px;
+  }
+}
+.movie-level {
+  margin: 15px 0;
+  padding: 5px 10px;
+  display: inline-block;
+  color: #000;
+}
+.y12 {
+  background-color: yellow;
+}
+.y6 {
+  background-color: rgb(35, 162, 247);
+}
+//landing for index
 #landing {
   //position: relative; //for swiper
   width: 100%;
@@ -29,13 +53,14 @@
       display: block;
       text-align: right;
     }
-      @include v.pad-width {
-          font-size: 6rem;
-        }
 
-        @include v.phone-width {
-          font-size: 3rem;
-        }
+    @include v.pad-width {
+      font-size: 6rem;
+    }
+
+    @include v.phone-width {
+      font-size: 3rem;
+    }
   }
 
   .welcome {
@@ -45,18 +70,19 @@
     position: absolute;
     bottom: 115px;
     left: 14vw;
-     @include v.pad-width {
-          width: 180px;
-          height: 180px;
-          bottom: 80px;
-          left: 10vw;
-        }
 
-        @include v.phone-width {
-          width: 150px;
-          height: 150px;
-          bottom: 50px;
-        }
+    @include v.pad-width {
+      width: 180px;
+      height: 180px;
+      bottom: 80px;
+      left: 10vw;
+    }
+
+    @include v.phone-width {
+      width: 150px;
+      height: 150px;
+      bottom: 50px;
+    }
 
     .text-round {
       width: 100%;
@@ -77,37 +103,39 @@
       background: url(../image/svg/mouse.svg);
       background-repeat: no-repeat;
       background-size: contain;
+
       @include v.pad-width {
-          width: calc(34px - 5px);
-          height: calc(53px - 5px);
-       }
+        width: calc(34px - 5px);
+        height: calc(53px - 5px);
+      }
 
       @include v.phone-width {
-          width: calc(34px - 8px);
-          height: calc(53px - 8px);
-       }
+        width: calc(34px - 8px);
+        height: calc(53px - 8px);
+      }
 
       .scroller {
         width: 3px;
         height: 8px;
-        border: 1px solid v.$font-primary; 
+        border: 1px solid v.$font-primary;
         border-radius: 25%;
         position: absolute;
         top: 13px;
         left: 14px;
+
         // animation: scroll 1s ease-in infinite;
         @include v.pad-width {
           left: 12px;
         }
 
         @include v.phone-width {
-         left: 11px;
-       }
+          left: 11px;
+        }
       }
     }
   }
 }
-
+//landing animation
 .start-scroll {
   #landing {
     .landing-page {
@@ -115,62 +143,47 @@
       transition: height 1s cubic-bezier(0.76, -0.24, 0.55, 0.91);
       transform-origin: top center;
     }
+
     h1,
     .welcome {
       display: none;
     }
   }
+
   nav {
     opacity: 1;
     transition: opacity 0.5s cubic-bezier(0.76, -0.24, 0.55, 0.91) 0.8s;
   }
 }
-
+//page style
 .showing-list {
   text-align: center;
   margin-bottom: 20px;
+
   a {
-    > div {
+    >div {
       padding-right: 10px;
     }
-    .poster {
-      img {
-        border-radius: 10px;
-        width: 100%;
-      }
-    }
-    .movie-title {
-      margin-top: 10px;
-      font-weight: bold;
-      span {
-        font-weight: 500;
-        display: block;
-        margin-top: 5px;
-      }
-    }
-    .movie-level {
-      margin: 15px 0;
-      padding: 5px 10px;
-      display: inline-block;
-      color: #000;
-    }
   }
-  .y12 {
-    background-color: yellow;
-  }
-  .y6 {
-    background-color: rgb(35, 162, 247);
+
+  .poster {
+    img {
+      border-radius: 10px;
+      width: 100%;
+    }
   }
 }
 
 .onlinebook {
   .select-box {
     padding-right: 40px;
+
     div {
       display: flex;
       align-items: center;
       margin-bottom: 30px;
     }
+
     select {
       width: 100%;
       height: 70px;
@@ -186,6 +199,7 @@
         color: v.$white;
       }
     }
+
     // .movie-date {
     //   width: 100%;
     //   height: 70px;
@@ -201,9 +215,10 @@
     }
   }
 }
+
 .lastestnew {
   .news-box {
-    & > a {
+    &>a {
       display: flex;
       margin-bottom: 20px;
 
@@ -211,31 +226,49 @@
         flex-direction: column;
       }
     }
+
     .new-info {
-        margin-left: 20px;
-        text-align: left;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        @include v.phone-width {
-          margin-left: 0px;
-          margin-top: 15px;
-        }
-        hr {
-          width: 60px;
-          margin-left: 0;
-          height: 1px;
-          background-color: v.$primary;
-          border: none;
-          margin-bottom: 15px;
-        }
+      margin-left: 20px;
+      text-align: left;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      @include v.phone-width {
+        margin-left: 0px;
+        margin-top: 15px;
       }
-     
-      p{
+
+      hr {
+        width: 60px;
+        margin-left: 0;
+        height: 1px;
+        background-color: v.$primary;
+        border: none;
         margin-bottom: 15px;
       }
+    }
+
+    p {
+      margin-bottom: 15px;
+    }
   }
 }
+.movie-item{
+  .movie-title {
+  
+  span {
+    
+  }
+}
+.movie-level {
+  
+}
+}
+
+
+
+
 
 //animate
 @keyframes rotate {
