--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,28 @@
+.movie-title {
+  margin-top: 10px;
+  font-weight: bold;
+}
+.movie-title span {
+  font-weight: 500;
+  display: block;
+  margin-top: 5px;
+}
+
+.movie-level {
+  margin: 15px 0;
+  padding: 5px 10px;
+  display: inline-block;
+  color: #000;
+}
+
+.y12 {
+  background-color: yellow;
+}
+
+.y6 {
+  background-color: rgb(35, 162, 247);
+}
+
 #landing {
   width: 100%;
   z-index: 10;
@@ -137,30 +162,9 @@
 .showing-list a > div {
   padding-right: 10px;
 }
-.showing-list a .poster img {
+.showing-list .poster img {
   border-radius: 10px;
   width: 100%;
-}
-.showing-list a .movie-title {
-  margin-top: 10px;
-  font-weight: bold;
-}
-.showing-list a .movie-title span {
-  font-weight: 500;
-  display: block;
-  margin-top: 5px;
-}
-.showing-list a .movie-level {
-  margin: 15px 0;
-  padding: 5px 10px;
-  display: inline-block;
-  color: #000;
-}
-.showing-list .y12 {
-  background-color: yellow;
-}
-.showing-list .y6 {
-  background-color: rgb(35, 162, 247);
 }
 
 .onlinebook .select-box {
