--- a/scss/global.scss
+++ b/scss/global.scss
@@ -278,7 +278,6 @@ nav {
   padding: 20px 0;
   transition: all 0.5s;
   z-index: 5;
-  opacity: 0;
 
   &.mini {
     padding: 10px 0;
@@ -706,9 +705,6 @@ nav {
       padding: 0 15px;
     }
 
-    .content {
-    }
-
     .content-row {
       display: flex;
       flex-wrap: wrap;
@@ -723,6 +719,13 @@ nav {
         @include v.phone-width {
           flex-basis: 100%;
         }
+      }
+
+      .row-2-1{
+         flex-basis: 30%;
+      }
+      .row-2-auto{
+        flex-basis: 70%;
       }
 
       .row-5 {
