--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,12 +1,12 @@
-$primary: #b9373b;
-$primary-opacity: #b9373bbd;
+$primary: #B9373C;
+$primary-opacity: #b9373bbb;
 $secondary:#000;
 
-$white:#fff;
+$white:#C7C7C7;
 $font-primary:rgb(233, 233, 233);
-$bg-color:#000;
+$bg-color:#191919;
 
-$max-width:1600px;
+$max-width:1400px;
 
 $pc-media:992px;
 $pcs-media:991px;
