--- a/css/global.css
+++ b/css/global.css
@@ -1,25 +1,24 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+body,
 html {
   -webkit-text-size-adjust: 100%;
   letter-spacing: 1.5px;
-  font-size: 16px;
-  position: relative;
-  background-color: #000;
-}
-
-body {
   margin: 0;
   padding: 0;
   font-size: 15px;
   position: relative;
-  background-color: #000;
+  background-color: #191919;
+  line-height: 1.6;
+  font-family: Microsoft JhengHei, Arial, sans-serif;
 }
-body.no-scroll {
+body.no-scroll,
+html.no-scroll {
   overflow: hidden;
 }
 @media all and (min-width: 992px) {
-  body {
-    font-size: 16px;
+  body,
+html {
+    font-size: 18px;
   }
 }
 
@@ -58,7 +57,7 @@ a {
   transition: color 0.3s ease, font-weight 0.4s ease;
 }
 a:hover {
-  color: #fff;
+  color: #C7C7C7;
   font-weight: bolder;
 }
 
@@ -103,6 +102,7 @@ sup {
 
 img {
   border-style: none;
+  vertical-align: middle;
 }
 
 button,
@@ -292,7 +292,7 @@ li {
 /* nav */
 nav {
   width: 100%;
-  max-width: 1600px;
+  max-width: 1400px;
   margin: 0 auto;
   top: 0;
   left: 0;
@@ -344,7 +344,7 @@ nav .menu-toggler {
 nav .menu-toggler .menu-toggler-line {
   width: 100%;
   height: 2px;
-  background: rgba(185, 55, 59, 0.7411764706);
+  background: rgba(185, 55, 59, 0.7333333333);
   margin: 0 0 8px 0px;
   position: relative;
   -webkit-transition: all 0.35s ease-out;
@@ -470,15 +470,15 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   transition: color 0.4s ease, font-weight 0.4s ease;
 }
 .sidebar .menu .menu-link:hover {
-  color: #fff;
+  color: #C7C7C7;
   font-weight: bolder;
 }
 .sidebar .menu .menu-link:focus {
-  color: #fff;
+  color: #C7C7C7;
   font-weight: bold;
 }
 .sidebar .menu .menu-link:active {
-  color: #fff;
+  color: #C7C7C7;
   font-weight: bold;
 }
 .sidebar .menu .dropdown-menu {
@@ -506,7 +506,7 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   margin-bottom: 5px;
 }
 .sidebar .menu .dropdown-menu li:nth-of-type(1) {
-  background-color: rgba(185, 55, 59, 0.7411764706);
+  background-color: rgba(185, 55, 59, 0.7333333333);
 }
 .sidebar .menu .dropdown-menu li:nth-of-type(2) {
   background-color: rgba(151, 151, 151, 0.6431372549);
@@ -515,7 +515,7 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   color: rgb(233, 233, 233);
 }
 .sidebar .user-account {
-  border: 1px solid rgba(185, 55, 59, 0.7411764706);
+  border: 1px solid rgba(185, 55, 59, 0.7333333333);
   border-radius: 20px;
   position: absolute;
   right: 30px;
@@ -559,7 +559,7 @@ nav .input-toggler:checked ~ .sidebar-overlay {
 .sidebar .user-account div a {
   display: inline-block;
   padding: 8px 20px;
-  background-color: rgba(185, 55, 59, 0.7411764706);
+  background-color: rgba(185, 55, 59, 0.7333333333);
   border-radius: 18px;
 }
 .sidebar .user-account div.account-sub {
@@ -594,7 +594,7 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   transition: transform 0.4s cubic-bezier(0.56, 0, 0, 1), opacity 0.6s ease, -webkit-transform 0.4s cubic-bezier(0.56, 0, 0, 1);
 }
 .sidebar .user-account.-active {
-  background-color: rgba(185, 55, 59, 0.7411764706);
+  background-color: rgba(185, 55, 59, 0.7333333333);
   -webkit-transition-delay: 0.2s;
           transition-delay: 0.2s;
 }
@@ -670,7 +670,7 @@ nav .input-toggler:checked ~ .sidebar-overlay {
           transition-delay: 0.2s;
 }
 .sidebar .user-account.isUser {
-  background-color: rgba(185, 55, 59, 0.7411764706);
+  background-color: rgba(185, 55, 59, 0.7333333333);
 }
 .sidebar .user-account.isUser .account-sub {
   display: block;
@@ -683,7 +683,7 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   display: none;
 }
 .sidebar .user-account.isUser:hover {
-  background-color: rgba(185, 55, 59, 0.7411764706);
+  background-color: rgba(185, 55, 59, 0.7333333333);
 }
 .sidebar .user-account:hover {
   background-color: transparent;
@@ -706,20 +706,31 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   width: 5px;
   height: 5px;
   border-radius: 50%;
-  background-color: #b9373b;
+  background-color: #B9373C;
   margin-right: 5px;
   margin-bottom: 2px;
 }
 .section-box .main-title div:nth-of-type(2) {
-  color: #b9373b;
+  color: #B9373C;
   font-weight: 600;
   margin-left: 10px;
 }
+.section-box .primary-title {
+  margin-bottom: 30px;
+}
+.section-box .primary-title:after {
+  content: "|";
+  position: relative;
+  top: -2px;
+}
 .section-box .section {
-  color: #fff;
-  max-width: 1600px;
-  margin: 80px auto 50px auto;
+  color: #C7C7C7;
+  max-width: 1400px;
+  margin: 50px auto 50px auto;
   padding: 0 30px;
+}
+.section-box .section:last-of-type {
+  margin-bottom: 150px;
 }
 @media all and (min-width: 768px) and (max-width: 991px) {
   .section-box .section {
@@ -730,6 +741,9 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   .section-box .section {
     padding: 0 15px;
   }
+}
+.section-box .section .content {
+  margin: 30px 0;
 }
 .section-box .section .content-row {
   display: -webkit-box;
@@ -755,12 +769,36 @@ nav .input-toggler:checked ~ .sidebar-overlay {
   }
 }
 .section-box .section .content-row .row-2-1 {
-  -ms-flex-preferred-size: 30%;
-      flex-basis: 30%;
+  -ms-flex-preferred-size: 25%;
+      flex-basis: 25%;
 }
-.section-box .section .content-row .row-2-auto {
+@media all and (min-width: 768px) and (max-width: 991px) {
+  .section-box .section .content-row .row-2-1 {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+}
+@media all and (max-width: 769px) {
+  .section-box .section .content-row .row-2-1 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+}
+.section-box .section .content-row .row-2-9 {
   -ms-flex-preferred-size: 70%;
       flex-basis: 70%;
+}
+@media all and (min-width: 768px) and (max-width: 991px) {
+  .section-box .section .content-row .row-2-9 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+}
+@media all and (max-width: 769px) {
+  .section-box .section .content-row .row-2-9 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
 .section-box .section .content-row .row-5 {
   -ms-flex-preferred-size: 20%;
@@ -780,10 +818,11 @@ nav .input-toggler:checked ~ .sidebar-overlay {
 }
 
 footer {
-  background-color: #fff;
+  background-color: #0F0F0F;
+  color: #C7C7C7;
 }
 footer > div {
-  max-width: 1600px;
+  max-width: 1400px;
   margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -798,7 +837,7 @@ footer > div {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 20px 30px;
+  padding: 40px 30px;
 }
 @media all and (min-width: 768px) and (max-width: 991px) {
   footer > div {
@@ -829,6 +868,15 @@ footer > div div {
     text-align: center;
   }
 }
+footer > div a {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-color: #C7C7C7;
+  border-radius: 50%;
+  text-align: center;
+  margin-bottom: 10px;
+}
 
 /* other share */
 :focus {
@@ -845,5 +893,58 @@ a.event-disable {
 }
 
 .bigger-font {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
+}
+
+.material-icons {
+  margin-right: 10px;
+  vertical-align: sub;
+  line-height: 1.6;
+}
+
+.mul-ellipsis-4 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-inline-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+}
+
+@media all and (min-width: 768px) and (max-width: 991px) {
+  .video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+  }
+
+  .video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+@media all and (max-width: 769px) {
+  .video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+  }
+
+  .video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
