--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,28 +1,24 @@
-@use "variables" as v;
+@use "variables"as v;
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+body,
 html {
-  // line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   letter-spacing: 1.5px;
-  font-size: 16px;
-  position: relative;
-  background-color: v.$bg-color;
-}
-
-body {
   margin: 0;
   padding: 0;
   font-size: 15px;
   position: relative;
   background-color: v.$bg-color;
+  line-height: 1.6;
+  font-family: Microsoft JhengHei, Arial, sans-serif;
 
   &.no-scroll {
     overflow: hidden;
   }
 
   @include v.pc-width {
-    font-size: 16px;
+    font-size: 18px;
   }
 }
 
@@ -104,6 +100,7 @@ sup {
 
 img {
   border-style: none;
+  vertical-align: middle;
 }
 
 button,
@@ -319,7 +316,7 @@ nav {
   }
 
   .input-toggler {
-    & ~ .sidebar .menu {
+    &~.sidebar .menu {
       @include v.pad-width {
         position: absolute;
         top: 0;
@@ -339,7 +336,7 @@ nav {
       }
     }
 
-    & ~ .sidebar-overlay {
+    &~.sidebar-overlay {
       position: absolute;
       background-color: #000;
       width: 100%;
@@ -352,27 +349,27 @@ nav {
     }
 
     &:checked {
-      & ~ .menu-toggler .menu-toggler-line {
+      &~.menu-toggler .menu-toggler-line {
         top: 5px;
         transform: translateY(100px);
         transform: rotate(45deg);
       }
 
-      & ~ .menu-toggler .menu-toggler-line:nth-child(2) {
+      &~.menu-toggler .menu-toggler-line:nth-child(2) {
         display: none;
       }
 
-      & ~ .menu-toggler .menu-toggler-line:nth-child(3) {
+      &~.menu-toggler .menu-toggler-line:nth-child(3) {
         top: -5px;
         transform: translateY(10);
         transform: rotate(135deg);
       }
 
-      & ~ .sidebar .menu {
+      &~.sidebar .menu {
         left: 0;
       }
 
-      & ~ .sidebar-overlay {
+      &~.sidebar-overlay {
         display: block;
         opacity: 0.9;
       }
@@ -416,7 +413,7 @@ nav {
   .menu {
     transition: all 0.35s ease-out;
 
-    > li {
+    >li {
       display: inline-block;
       width: 12.5%;
       text-align: center;
@@ -692,17 +689,36 @@ nav {
     }
   }
 
+  .primary-title {
+    margin-bottom: 30px;
+
+    &:after {
+      content: "|";
+      position: relative;
+      top: -2px;
+    }
+  }
+
   .section {
     color: v.$white;
     max-width: v.$max-width;
-    margin: 80px auto 50px auto;
+    margin: 50px auto 50px auto;
     padding: 0 30px;
+
+    &:last-of-type {
+      margin-bottom: 150px;
+    }
+
     @include v.pad-width {
       padding: 0 15px;
     }
 
     @include v.phone-width {
       padding: 0 15px;
+    }
+
+    .content {
+      margin: 30px 0;
     }
 
     .content-row {
@@ -721,11 +737,28 @@ nav {
         }
       }
 
-      .row-2-1{
-         flex-basis: 30%;
+      .row-2-1 {
+        flex-basis: 25%;
+
+        @include v.pad-width {
+          flex-basis: 50%;
+        }
+
+        @include v.phone-width {
+          flex-basis: 100%;
+        }
       }
-      .row-2-auto{
+
+      .row-2-9 {
         flex-basis: 70%;
+
+        @include v.pad-width {
+          flex-basis: 100%;
+        }
+
+        @include v.phone-width {
+          flex-basis: 100%;
+        }
       }
 
       .row-5 {
@@ -744,16 +777,16 @@ nav {
 }
 
 footer {
-  background-color: #fff;
-
-  & > div {
+  background-color: #0F0F0F;
+  color: v.$white;
+  &>div {
     max-width: v.$max-width;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 30px;
+    padding: 40px 30px;
 
     @include v.pad-width {
       flex-direction: column;
@@ -773,6 +806,15 @@ footer {
         text-align: center;
       }
     }
+    a{
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      background-color:#C7C7C7;
+      border-radius: 50%;
+      text-align: center;
+      margin-bottom: 10px;
+    }
   }
 }
 
@@ -780,6 +822,7 @@ footer {
 :focus {
   outline-width: 0px;
 }
+
 a.event-disable {
   pointer-events: none;
   cursor: default;
@@ -790,5 +833,60 @@ a.event-disable {
 }
 
 .bigger-font {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
+}
+
+.material-icons {
+  margin-right: 10px;
+  vertical-align: sub;
+  line-height: 1.6;
+}
+
+.mul-ellipsis-4 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-inline-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+}
+
+//for youtube rwd
+@include v.pad-width {
+  .video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+  }
+
+  .video-container iframe,
+  .video-container object,
+  .video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@include v.phone-width {
+  .video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+  }
+
+  .video-container iframe,
+  .video-container object,
+  .video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
