--- a/scss/index.scss
+++ b/scss/index.scss
@@ -8,21 +8,24 @@
   span {
     font-weight: 500;
     display: block;
-    margin-top: 5px;
   }
 }
+
 .movie-level {
   margin: 15px 0;
   padding: 5px 10px;
   display: inline-block;
   color: #000;
 }
+
 .y12 {
   background-color: yellow;
 }
+
 .y6 {
-  background-color: rgb(35, 162, 247);
+  background-color: #5A98C0;
 }
+
 //landing for index
 #landing {
   //position: relative; //for swiper
@@ -135,6 +138,7 @@
     }
   }
 }
+
 //landing animation
 .start-scroll {
   #landing {
@@ -155,6 +159,7 @@
     transition: opacity 0.5s cubic-bezier(0.76, -0.24, 0.55, 0.91) 0.8s;
   }
 }
+
 //page style
 .showing-list {
   text-align: center;
@@ -254,16 +259,70 @@
     }
   }
 }
-.movie-item{
-  .movie-title {
-  
-  span {
-    
+
+.movie-item {
+  &:first-of-type {
+    margin-right: 50px;
+
+    @include v.phone-width {
+      margin-right: 0;
+    }
+  }
+
+  img {
+    width: 100%;
+  }
+
+  .up-date {
+    margin: 10px 0 30px 0;
+    color: v.$primary;
+    font-weight: bold;
+  }
+
+  .movie-level {
+    margin-top: 0;
+  }
+
+  .book-btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #5A98C0;
+    border-radius: 5px;
+    margin-bottom: 30px;
+    color: #000;
+    cursor: pointer;
+    font-weight: bold;
+  }
+
+  .list-item {
+    >div {
+      font-weight: bold;
+      margin-bottom: 10px;
+
+      span {
+        font-weight: normal;
+        border-left: 1px solid #fff;
+        padding-left: 10px;
+        margin-left: 10px;
+      }
+    }
+
+    .list-2 {
+      width: 100%;
+      display: -webkit-inline-box;
+
+      div {
+        max-width: 95%;
+      }
+    }
   }
 }
-.movie-level {
-  
-}
+
+.trailer {
+  background-color: rgba(73, 73, 73, 0.596);
+  padding: 2rem;
+  text-align: center;
+  margin-top: 50px;
 }
 
 
